cabal-version:       2.0
name:                vector-hashtables
version:             0.1.2.1
synopsis:            Efficient vector-based mutable hashtables implementation.
description:
  This package provides efficient vector-based hashtable implementation similar to .NET Generic Dictionary implementation (at the time of 2015).
  .
  See "Data.Vector.Hashtables" for documentation.
homepage:            https://github.com/klapaucius/vector-hashtables#readme
license:             BSD3
license-file:        LICENSE
author:              klapaucius
maintainer:          klapaucius, swamp_agr, ArtemPelenitsyn
copyright:           2016-2024 klapaucius, swamp_agr
category:            Data
build-type:          Simple
extra-doc-files:     README.md,
                     changelog.md
extra-source-files:  gen/GenPrimes.hs
tested-with:
    GHC == 9.8.1
    GHC == 9.6.3
    GHC == 9.4.7
    GHC == 9.2.8
    GHC == 9.0.2
    GHC == 8.10.7
    GHC == 8.8.4
    GHC == 8.6.5

library
  hs-source-dirs:    src
  exposed-modules:     Data.Vector.Hashtables,
                       Data.Vector.Hashtables.Internal,
                       Data.Vector.Hashtables.Internal.Mask,
                       Data.Primitive.PrimArray.Utils
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , primitive >= 0.7.1.0
                     , vector
                     , hashable
  default-language:    Haskell2010

benchmark vector-hashtables-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts
  build-depends:       base
                     , vector-hashtables
                     , vector
                     , primitive
                     , criterion
                     , hashtables
                     , unordered-containers
  default-language:    Haskell2010

test-suite vector-hashtables-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Data.Vector.HashTablesSpec
  build-depends:       base
                     , primitive
                     , containers
                     , hashable
                     , vector
                     , vector-hashtables

  -- Additional dependencies
  build-depends:
      hspec                >= 2.6.0    && < 2.12
    , QuickCheck           >= 2.12.6.1 && < 2.17
    , quickcheck-instances >= 0.3.19   && < 0.4

  build-tool-depends:
    hspec-discover:hspec-discover >= 2.6.0 && < 2.12

source-repository head
  type:     git
  location: https://github.com/klapaucius/vector-hashtables
